<resources>
    <string name="app_name" translatable="false">Trip App Demo</string>
    <string name="places_api_key" translatable="false">AIzaSyDEOlavu89ZTbPhlzpQ41SDzE-rXYZE2Ks</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="welcome_title">Welcome</string>
    <string name="done_Button">Done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="trip_period_title">Trip Period</string>
    <string name="where_to">Where to?</string>
    <string name="hotels_button">Hotels</string>
    <string name="flights_button">Flights</string>
    <string name="from">From: -</string>
    <string name="to">To: -</string>
    <string name="dialoge_massege">Are You Want Save this Location As Home?</string>
    <string name="dialoge_yes">Yes</string>
    <string name="dialoge_no">No</string>
    <string name="dialoge_cancel">Cancel</string>
    <string name="your_trips">Your Trips</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="en">ENG</string>
    <string name="ar">Ar</string>
    <string name="change_your_location">Change Your Location</string>
    <string name="help">Help</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="rest_button">Rest</string>
    <string name="current_location">Current Location: - </string>
    <string name="not_selected">No Location Selected</string>
    <string name="rest_dialog_massage">This will erase data !</string>
    <string name="splach_screen_title" translatable="false">Trip Planner</string>
    <string name="your_location_hint">Your Location</string>
    <string name="get_my_location_btn">Get My Location</string>
    <string name="gps_dialog_title">GPS Settings</string>
    <string name="gps_dialog_message">You Must Turn ON The GPS, Are You Want Go To Settings?</string>
    <string name="go_dialog_title">Save Location!</string>
    <string name="go_dialog_message">Are You Want Save This Location As Home?</string>
    <string name="restuarants_button">Restuarants</string>
    <string name="not_set_yet">Not set yet!</string>
</resources>