<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_layout6">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="45sp"
        android:typeface="serif"
        android:textColor="@color/colorPrimaryDark"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:typeface="serif"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/ARBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ar"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/ENBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en"
            android:layout_marginStart="20dp"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="@color/colorPrimaryDark"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_your_location"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:typeface="serif"/>

    <TextView
        android:id="@+id/Home_Location_saved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/CountresSpin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="330dp">

        <Button
            android:id="@+id/SaveBtn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/save_button"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/CancelBtn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/cancel_button"
            android:layout_marginStart="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/RestBtn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/rest_button"
            android:layout_marginStart="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>



</LinearLayout>