<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/TripContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="500dp"
            android:layout_height="234.5dp"
            app:srcCompat = "@drawable/cover13"/>

        <TextView
            android:id="@+id/Destination_Text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/where_to"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_marginTop="90dp"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="130dp"
            android:background="#30141414"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white">

        <Button
            android:id="@+id/HotelsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotels_button"
            android:drawableTop="@drawable/hotel"
            android:background="?android:attr/selectableItemBackground"/>

        <Button
            android:id="@+id/RestuarantsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restuarants_button"
            android:drawableTop="@drawable/restuarant"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginStart="30dp"/>

        <Button
            android:id="@+id/FlightsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flights_button"
            android:drawableTop="@drawable/flight"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginStart="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_layout6" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_period_title"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:typeface="serif"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:typeface="serif"
                android:layout_gravity="center_vertical|center_horizontal"
                android:textColor="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/FromDateEdit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:typeface="serif"
                android:gravity="center"
                android:layout_gravity="center_horizontal|center_vertical"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:typeface="serif"
                android:layout_gravity="center_vertical|center_horizontal"
                android:textColor="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/ToDateEdit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:typeface="serif"
                android:gravity="center"
                android:layout_gravity="center_horizontal|center_vertical"/>

        </LinearLayout>
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            tools:context=".MapsActivity" />
    </LinearLayout>



</LinearLayout>