<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_layout3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:text="@string/welcome_title"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="230dp"
        android:textSize="70sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/Get_Location_Btn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/get_my_location_btn"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:typeface="serif"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/My_Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:typeface="serif"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/your_location_hint"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/Start_Btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="Go"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="@color/colorPrimaryDark"
        android:background="?android:attr/selectableItemBackground"/>


</LinearLayout>